<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="heading">My Nanodegree Apps</string>
    <string name="action_settings">Settings</string>
    <string name="popular_movies">POPULAR MOVIES</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE : MY OWN APP</string>
    <string name="toast_text">This button will launch my %1$s app</string>
</resources>
