<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:text="@string/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30dp"
        />
    <Button
        android:id="@+id/popular_movies"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        style="@style/button"
        android:background="@drawable/primary_button"
        android:text="@string/popular_movies"
        />
    <Button
        android:id="@+id/scores_app"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="16dp"
        android:padding="20dp"
        android:textColor="@color/white"
        android:background="@drawable/primary_button"
        android:text="@string/scores_app"
        />
    <Button
        android:id="@+id/library_app"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        style="@style/button"
        android:background="@drawable/primary_button"
        android:text="@string/library_app"
        />
    <Button
        android:id="@+id/build_it"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        style="@style/button"
        android:background="@drawable/primary_button"
        android:text="@string/build_it"
        />
    <Button
        android:id="@+id/xyz_reader"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        style="@style/button"
        android:background="@drawable/primary_button"
        android:text="@string/xyz_reader"
        />
    <Button
        android:id="@+id/capstone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        style="@style/button"
        android:background="@drawable/secondary_button"
        android:text="@string/capstone"
        android:clickable="true"
        />
</LinearLayout>
